--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <main>
-        <h1>Welcome to My Website</h1>
-        <p>This is my new website which is hosted on GitHub Pages!</p>
+        <h1>LOOK AT THIS P.O.S</h1>
+        <p>Image credit to the mommas!</p>
+        <img src=”(your image URL here)”>
     </main>
 </body>
 
