--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>LOOK AT THIS P.O.S</h1>
         <p>Image credit to the mommas!</p>
-        <img src=”(your image URL here)”>
+        <img src=”pos.jpg”>
     </main>
 </body>
 
