--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>LOOK AT THIS P.O.S</h1>
         <p>Image credit to the mommas!</p>
-        <img src=”https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos.jpg”>
+        <img src=https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos.jpg>
     </main>
 </body>
 
