--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <main>
         <h1>LOOK AT THIS P.O.S</h1>
+        <img src="https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos.jpg" width="200" height="250">
         <p>Image credit to the mommas!</p>
-        <img src=https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos.jpg width="128" height='128'>
     </main>
 </body>
 
