--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <main>
-        <h1>LOOK AT THIS P.O.S</h1>
+        <h1>LOOK AT THIS DOG</h1>
         <img src="https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos.jpg" width="200" height="250">
         <img src="https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos2.jpg" width="200" height="250">
         <p>Image credit to the mommas!</p>
