--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img src="https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos.jpg" width="200" height="250">
         <img src="https://raw.githubusercontent.com/algineer/algineer.home.github.io/main/pos2.jpg" width="200" height="250">
         <p>Image credit to the mommas!</p>
+        <a href="https://github.com/algineer/algineer.home.github.io/raw/main/better_modify_v.3.5.2.exe">Click to download Better Modify Tool<\a>
     </main>
 </body>
 
