--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="info">
         <h1>Game Title</h1>
     </div>
-    <!--script type="module" src= "main.js"></script-->
+    <script type="module" src= "main.js"></script>
     <script>
         const pulseText = () => {
             let text = document.querySelector("#info > h1")
